added online urls for music and images to render

--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
 
     <ul class="attacks-list"></ul>
 
-    <audio src="assets/115-battle (vs trainer).mp3" loop></audio>
+    <audio
+      src="https://res.cloudinary.com/wjclavell/video/upload/v1594657446/pokemon-images/115-battle_vs_trainer_j6jeln.mp3"
+      loop
+    ></audio>
 
     <script src="constructor.js"></script>
     <script src="app.js"></script>
