editted script tags

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script
-      src="http://code.jquery.com/jquery-3.5.1.js"
+      src="https://code.jquery.com/jquery-3.5.1.js"
       integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
       crossorigin="anonymous"
       defer
@@ -57,7 +57,7 @@
       loop
     ></audio>
 
-    <script src="constructor.js"></script>
-    <script src="app.js"></script>
+    <script src="constructor.js" defer></script>
+    <script src="app.js" defer></script>
   </body>
 </html>
